// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Desktop experience visual snapshots matches the boot splash shell 1`] = `
<div
  class="app-shell app-shell--windowed app-shell--landing"
>
  <main
    class="app-content app-content--full"
  >
    <section
      aria-label="MAP2 boot splash"
      class="hp2-boot"
    >
      <div
        class="hp2-boot__center"
      >
        <div
          class="hp2-boot__mark-wrap"
        >
          <img
            alt="MAP2 logo"
            class="hp2-boot__mark"
            src="MAP2-LOGO.png"
          />
        </div>
        <h1
          class="hp2-boot__title"
        >
          Mackes Audio Platform
        </h1>
        <p
          class="hp2-boot__subtitle"
        >
          Initializing the Carbon-governed pre-Warp desktop session and restoring platform context.
        </p>
      </div>
      <div
        class="hp2-boot__progress"
      >
        <div
          class="cds--progress-bar cds--progress-bar--big cds--progress-bar--default cds--progress-bar--indeterminate"
        >
          <div
            class="cds--progress-bar__label cds--visually-hidden"
            id="progress-bar-_r_0_"
          >
            <span
              class="cds--progress-bar__label-text"
            >
              Boot progress
            </span>
          </div>
          <div
            aria-busy="true"
            aria-describedby="progress-bar-helper-text-_r_2_"
            aria-invalid="false"
            aria-labelledby="progress-bar-_r_0_"
            class="cds--progress-bar__track"
            role="progressbar"
          >
            <div
              class="cds--progress-bar__bar"
              style="transform: scaleX(NaN);"
            />
          </div>
          <div
            class="cds--progress-bar__helper-text"
            id="progress-bar-helper-text-_r_2_"
          >
            Restoring workplace shell
            <div
              aria-live="polite"
              class="cds--visually-hidden"
              id="progress-bar-helper-_r_1_"
            >
              Loading
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
  <div
    aria-label="Primary navigation shell"
    class="window-taskbar"
    data-running-route-count="0"
    style="--window-shell-accent: var(--cds-support-warning);"
  >
    <div
      class="window-taskbar__left"
    >
      <div
        class="window-taskbar__start-root"
      >
        <button
          aria-controls="start-menu-panel"
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="Open desktop menu"
          class="window-taskbar__start-btn"
          type="button"
        >
          <span
            aria-hidden="true"
            class="window-taskbar__start-mark"
          >
            <svg
              aria-hidden="true"
              class="window-taskbar__start-mark-icon"
              focusable="false"
              viewBox="0 0 192 192"
            >
              <rect
                fill="#4589FF"
                height="168"
                rx="34"
                width="168"
                x="12"
                y="12"
              />
              <rect
                fill="none"
                height="162"
                rx="31"
                stroke="#A6C8FF"
                stroke-opacity="0.45"
                stroke-width="2"
                width="162"
                x="15"
                y="15"
              />
              <rect
                fill="#13171B"
                height="136"
                rx="24"
                width="136"
                x="28"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="136"
                rx="13"
                width="26"
                x="83"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="26"
                rx="13"
                width="136"
                x="28"
                y="83"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="115"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="115"
              />
            </svg>
          </span>
          <span>
            Desktop
          </span>
        </button>
      </div>
      <div
        aria-label="Running applications"
        class="window-taskbar__indicators"
      />
    </div>
    <div
      class="window-taskbar__right"
    >
      <div
        class="window-taskbar__status window-taskbar__status--nodes"
      >
        <div
          data-testid="node-nav-bar"
        />
      </div>
      <div
        class="window-taskbar__status window-taskbar__status--latency"
      >
        <div
          data-testid="shell-latency-pressure-readout"
        >
          09
        </div>
      </div>
      <div
        class="window-taskbar__status window-taskbar__status--clock"
      >
        <div
          data-testid="taskbar-clock"
        >
          9:41 AM
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="cds--layer-one cds--modal shell-power-modal"
    role="presentation"
  >
    <div
      aria-label="Power"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--sm"
      role="dialog"
    >
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
      <div
        class="cds--modal-container-body"
      >
        <div
          class="cds--modal-header"
        >
          <h2
            class="cds--modal-header__label cds--type-delta"
          >
            Power
          </h2>
          <h2
            class="cds--modal-header__heading cds--type-beta"
          >
            Restart backend
          </h2>
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-_r_5_"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_5_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        >
          Restart the MAP2 backend service? Audio processing will pause briefly while the shell reconnects.
        </div>
        <div
          aria-busy="false"
          class="cds--modal-footer cds--btn-set"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Confirm restart
          </button>
        </div>
      </div>
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop experience visual snapshots matches the desktop shell after boot completes 1`] = `
<div
  class="app-shell app-shell--windowed app-shell--landing"
>
  <main
    class="app-content app-content--full"
  >
    <div
      class="hp2-root"
    >
      <section
        class="hp2-desktop hp2-desktop--default-image"
        data-testid="home-desktop"
        data-wallpaper-mode="default-image"
      >
        <img
          alt=""
          aria-hidden="true"
          class="hp2-desktop__wallpaper"
          data-testid="home-desktop-wallpaper-image"
          src="NEW-map2-landing-bg.png"
        />
        <div
          aria-hidden="true"
          class="hp2-desktop__underlay"
        />
      </section>
    </div>
  </main>
  <div
    aria-label="Primary navigation shell"
    class="window-taskbar"
    data-running-route-count="0"
    style="--window-shell-accent: var(--cds-support-warning);"
  >
    <div
      class="window-taskbar__left"
    >
      <div
        class="window-taskbar__start-root"
      >
        <button
          aria-controls="start-menu-panel"
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="Open desktop menu"
          class="window-taskbar__start-btn"
          type="button"
        >
          <span
            aria-hidden="true"
            class="window-taskbar__start-mark"
          >
            <svg
              aria-hidden="true"
              class="window-taskbar__start-mark-icon"
              focusable="false"
              viewBox="0 0 192 192"
            >
              <rect
                fill="#4589FF"
                height="168"
                rx="34"
                width="168"
                x="12"
                y="12"
              />
              <rect
                fill="none"
                height="162"
                rx="31"
                stroke="#A6C8FF"
                stroke-opacity="0.45"
                stroke-width="2"
                width="162"
                x="15"
                y="15"
              />
              <rect
                fill="#13171B"
                height="136"
                rx="24"
                width="136"
                x="28"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="136"
                rx="13"
                width="26"
                x="83"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="26"
                rx="13"
                width="136"
                x="28"
                y="83"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="115"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="115"
              />
            </svg>
          </span>
          <span>
            Desktop
          </span>
        </button>
      </div>
      <div
        aria-label="Running applications"
        class="window-taskbar__indicators"
      />
    </div>
    <div
      class="window-taskbar__right"
    >
      <div
        class="window-taskbar__status window-taskbar__status--nodes"
      >
        <div
          data-testid="node-nav-bar"
        />
      </div>
      <div
        class="window-taskbar__status window-taskbar__status--latency"
      >
        <div
          data-testid="shell-latency-pressure-readout"
        >
          09
        </div>
      </div>
      <div
        class="window-taskbar__status window-taskbar__status--clock"
      >
        <div
          data-testid="taskbar-clock"
        >
          9:41 AM
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="cds--layer-one cds--modal shell-power-modal"
    role="presentation"
  >
    <div
      aria-label="Power"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--sm"
      role="dialog"
    >
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
      <div
        class="cds--modal-container-body"
      >
        <div
          class="cds--modal-header"
        >
          <h2
            class="cds--modal-header__label cds--type-delta"
          >
            Power
          </h2>
          <h2
            class="cds--modal-header__heading cds--type-beta"
          >
            Restart backend
          </h2>
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-_r_f_"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_f_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        >
          Restart the MAP2 backend service? Audio processing will pause briefly while the shell reconnects.
        </div>
        <div
          aria-busy="false"
          class="cds--modal-footer cds--btn-set"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Confirm restart
          </button>
        </div>
      </div>
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop experience visual snapshots matches the desktop wallpaper context menu 1`] = `
<div
  class="app-shell app-shell--windowed app-shell--landing"
>
  <main
    class="app-content app-content--full"
  >
    <div
      class="hp2-root"
    >
      <section
        class="hp2-desktop hp2-desktop--default-image"
        data-testid="home-desktop"
        data-wallpaper-mode="default-image"
      >
        <img
          alt=""
          aria-hidden="true"
          class="hp2-desktop__wallpaper"
          data-testid="home-desktop-wallpaper-image"
          src="NEW-map2-landing-bg.png"
        />
        <div
          aria-hidden="true"
          class="hp2-desktop__underlay"
        />
        <div
          aria-label="Desktop context menu"
          class="hp2-desktop__context-menu"
          role="menu"
          style="left: 80px; top: 120px;"
        >
          <button
            class="hp2-desktop__context-item"
            type="button"
          >
            Refresh
          </button>
          <button
            class="hp2-desktop__context-item"
            type="button"
          >
            Display settings
          </button>
          <button
            class="hp2-desktop__context-item"
            type="button"
          >
            About
          </button>
        </div>
      </section>
    </div>
  </main>
  <div
    aria-label="Primary navigation shell"
    class="window-taskbar"
    data-running-route-count="0"
    style="--window-shell-accent: var(--cds-support-warning);"
  >
    <div
      class="window-taskbar__left"
    >
      <div
        class="window-taskbar__start-root"
      >
        <button
          aria-controls="start-menu-panel"
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="Open desktop menu"
          class="window-taskbar__start-btn"
          type="button"
        >
          <span
            aria-hidden="true"
            class="window-taskbar__start-mark"
          >
            <svg
              aria-hidden="true"
              class="window-taskbar__start-mark-icon"
              focusable="false"
              viewBox="0 0 192 192"
            >
              <rect
                fill="#4589FF"
                height="168"
                rx="34"
                width="168"
                x="12"
                y="12"
              />
              <rect
                fill="none"
                height="162"
                rx="31"
                stroke="#A6C8FF"
                stroke-opacity="0.45"
                stroke-width="2"
                width="162"
                x="15"
                y="15"
              />
              <rect
                fill="#13171B"
                height="136"
                rx="24"
                width="136"
                x="28"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="136"
                rx="13"
                width="26"
                x="83"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="26"
                rx="13"
                width="136"
                x="28"
                y="83"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="115"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="115"
              />
            </svg>
          </span>
          <span>
            Desktop
          </span>
        </button>
      </div>
      <div
        aria-label="Running applications"
        class="window-taskbar__indicators"
      />
    </div>
    <div
      class="window-taskbar__right"
    >
      <div
        class="window-taskbar__status window-taskbar__status--nodes"
      >
        <div
          data-testid="node-nav-bar"
        />
      </div>
      <div
        class="window-taskbar__status window-taskbar__status--latency"
      >
        <div
          data-testid="shell-latency-pressure-readout"
        >
          09
        </div>
      </div>
      <div
        class="window-taskbar__status window-taskbar__status--clock"
      >
        <div
          data-testid="taskbar-clock"
        >
          9:41 AM
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="cds--layer-one cds--modal shell-power-modal"
    role="presentation"
  >
    <div
      aria-label="Power"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--sm"
      role="dialog"
    >
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
      <div
        class="cds--modal-container-body"
      >
        <div
          class="cds--modal-header"
        >
          <h2
            class="cds--modal-header__label cds--type-delta"
          >
            Power
          </h2>
          <h2
            class="cds--modal-header__heading cds--type-beta"
          >
            Restart backend
          </h2>
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-_r_m_"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_m_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        >
          Restart the MAP2 backend service? Audio processing will pause briefly while the shell reconnects.
        </div>
        <div
          aria-busy="false"
          class="cds--modal-footer cds--btn-set"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Confirm restart
          </button>
        </div>
      </div>
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop experience visual snapshots matches the taskbar and Start Menu shell 1`] = `
<div
  class="app-shell app-shell--themed-workspace app-shell--windowed"
>
  <main
    class="app-content app-content--full"
  >
    <section
      aria-label="Artifacts window"
      class="app-window is-open"
      style="--window-shell-accent: #be95ff;"
    >
      <div
        class="window-titlebar"
      >
        <div
          class="window-titlebar__lead"
        >
          <span
            aria-hidden="true"
            class="window-titlebar__badge"
          >
            <svg
              aria-hidden="true"
              class="window-titlebar__icon"
              focusable="false"
              height="16"
              viewBox="0 0 32 32"
              width="16"
            >
              <path
                d="M7 9h11l3 3h4v13H7z"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M7 12h18"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M12 14.5v8.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 16h7"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 19h7"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 22h5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <circle
                cx="10"
                cy="16.5"
                fill="currentColor"
                r="1"
              />
              <circle
                cx="10"
                cy="19.5"
                fill="currentColor"
                r="1"
              />
              <path
                d="M10 17.5v1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M10 20.5v1.5h1.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
            </svg>
          </span>
          <div
            class="window-titlebar__copy"
          >
            <span
              class="window-titlebar__eyebrow"
            >
              Program object
            </span>
            <div
              class="window-titlebar__title-row"
            >
              <strong
                class="window-titlebar__title"
              >
                Artifacts
              </strong>
              <span
                class="window-titlebar__meta"
              >
                artifacts
              </span>
            </div>
          </div>
        </div>
        <div
          class="app-window__controls"
        >
          <button
            aria-label="Close Artifacts"
            class="app-window__close"
            type="button"
          >
            X
          </button>
        </div>
      </div>
      <div
        class="app-window__body"
      >
        <div
          data-testid="artifacts-page"
        >
          Audio Artifacts Workspace
        </div>
      </div>
    </section>
  </main>
  <div
    aria-label="Primary navigation shell"
    class="window-taskbar"
    data-running-route-count="1"
    style="--window-shell-accent: #be95ff;"
  >
    <div
      class="window-taskbar__left"
    >
      <div
        class="window-taskbar__start-root"
      >
        <button
          aria-controls="start-menu-panel"
          aria-expanded="true"
          aria-haspopup="menu"
          aria-label="Close desktop menu"
          class="window-taskbar__start-btn is-active"
          type="button"
        >
          <span
            aria-hidden="true"
            class="window-taskbar__start-mark"
          >
            <svg
              aria-hidden="true"
              class="window-taskbar__start-mark-icon"
              focusable="false"
              viewBox="0 0 192 192"
            >
              <rect
                fill="#4589FF"
                height="168"
                rx="34"
                width="168"
                x="12"
                y="12"
              />
              <rect
                fill="none"
                height="162"
                rx="31"
                stroke="#A6C8FF"
                stroke-opacity="0.45"
                stroke-width="2"
                width="162"
                x="15"
                y="15"
              />
              <rect
                fill="#13171B"
                height="136"
                rx="24"
                width="136"
                x="28"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="136"
                rx="13"
                width="26"
                x="83"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="26"
                rx="13"
                width="136"
                x="28"
                y="83"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="115"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="115"
              />
            </svg>
          </span>
          <span>
            Desktop
          </span>
        </button>
        <div
          aria-label="Desktop menu"
          class="cds--layer-two start-menu-panel"
          id="start-menu-panel"
          role="menu"
        >
          <div
            class="start-menu-panel__header"
          >
            <div
              class="start-menu-panel__header-copy"
            >
              <div
                class="start-menu-panel__brand-wrap"
              >
                <img
                  alt="MAP2 logo"
                  class="start-menu-panel__brand"
                  src="MAP2-LOGO.png"
                />
              </div>
              <strong>
                Desktop Menu
              </strong>
              <span>
                Current object: Artifacts.
              </span>
            </div>
            <div
              aria-hidden="true"
              class="start-menu-panel__header-meta"
            >
              <span>
                14 apps
              </span>
              <span>
                artifacts
              </span>
            </div>
          </div>
          <div
            class="start-menu-panel__shell"
          >
            <div
              aria-label="Desktop menu shortcuts"
              class="start-menu-panel__static-column"
              role="group"
            >
              <div
                class="start-menu-panel__column-header"
              >
                <p
                  class="start-menu-panel__eyebrow"
                >
                  System
                </p>
                <strong>
                  Quick actions
                </strong>
              </div>
              <button
                class="start-menu-panel__static-item"
                type="button"
              >
                Desktop
              </button>
              <button
                class="start-menu-panel__static-item"
                type="button"
              >
                System Setup
              </button>
              <button
                class="start-menu-panel__static-item"
                type="button"
              >
                Display Settings
              </button>
              <button
                class="start-menu-panel__static-item"
                type="button"
              >
                Refresh Desktop
              </button>
              <div
                class="start-menu-panel__static-item-root"
              >
                <button
                  aria-controls="start-menu-power-menu"
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="start-menu-panel__static-item"
                  type="button"
                >
                  Power
                </button>
              </div>
            </div>
            <div
              class="start-menu-panel__tiles-column"
              style="--start-menu-tile-columns: 4; --start-menu-tile-rows: 4;"
            >
              <div
                class="start-menu-panel__column-header"
              >
                <p
                  class="start-menu-panel__eyebrow"
                >
                  Programs
                </p>
                <strong>
                  All launchers
                </strong>
              </div>
              <div
                class="start-menu-panel__grid"
              >
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/platforms/overview"
                  style="--item-color: var(--cds-support-warning);"
                  title="Cluster-wide health, activity, and deployment readiness in one board. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Platform
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="20"
                        viewBox="0 0 32 32"
                        width="20"
                      >
                        <path
                          d="M8 8h13l3 3H11z"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M8 11h16a2 2 0 0 1 2 2v3H8z"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M8 18h16a2 2 0 0 1 2 2v4H8z"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M10 14h5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M10 21h5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <circle
                          cx="22"
                          cy="14"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="19"
                          cy="14"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="22"
                          cy="21"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="19"
                          cy="21"
                          fill="currentColor"
                          r="1.2"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Overview
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Beta
                    </span>
                  </span>
                </a>
                <a
                  aria-current="page"
                  class="start-menu-card start-menu-card--tile is-active"
                  href="/artifacts"
                  style="--item-color: #be95ff;"
                  title="Browse and manage all audio artifacts — LV2 plugins, NAM models, cabinet and reverb IRs, SoundFonts, and native JUCE processors — in a unified node-aware library. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Platform
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="20"
                        viewBox="0 0 32 32"
                        width="20"
                      >
                        <path
                          d="M7 9h11l3 3h4v13H7z"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M7 12h18"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M12 14.5v8.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M15 16h7"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M15 19h7"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M15 22h5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <circle
                          cx="10"
                          cy="16.5"
                          fill="currentColor"
                          r="1"
                        />
                        <circle
                          cx="10"
                          cy="19.5"
                          fill="currentColor"
                          r="1"
                        />
                        <path
                          d="M10 17.5v1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M10 20.5v1.5h1.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Audio Artifacts
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Artifacts
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/perform"
                  style="--item-color: var(--cds-support-warning);"
                  title="Open the full-screen live-performance surface for fast preset access, bypass control, tempo actions, and stage-focused guitar operation. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Platform
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="20"
                        viewBox="0 0 32 32"
                        width="20"
                      >
                        <path
                          d="M8 7h16"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M12 7l-2 6"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M20 7l2 6"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M10 20h12"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M12 24h8"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M16 10v10"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M16 10c0-2.4 1.8-4 4-4"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <circle
                          cx="20"
                          cy="6"
                          fill="currentColor"
                          r="1.5"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Stage Mode
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Stage
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/tesira"
                  style="--item-color: var(--cds-support-error);"
                  title="Work with Biamp Tesira AVB devices for fleet views, device pages, DSP surfaces, AVB context, and multi-device operational control. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Platform
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="20"
                        viewBox="0 0 32 32"
                        width="20"
                      >
                        <rect
                          fill="none"
                          height="22"
                          rx="4"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                          width="22"
                          x="5"
                          y="5"
                        />
                        <path
                          d="M11 9v14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M17 9v14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M23 9v14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M9 13h14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M9 19h14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <circle
                          cx="11"
                          cy="19"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="17"
                          cy="13"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="23"
                          cy="19"
                          fill="currentColor"
                          r="1.2"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Tesira AVB
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Beta
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/edirol-ua1000"
                  style="--item-color: var(--cds-link-primary);"
                  title="Open the Edirol UA-1000 control page to inspect device status and interface-specific audio controls for that hardware path. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Audio Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24,15V6a2,2,0,0,0-2-2H10A2,2,0,0,0,8,6v9a2,2,0,0,0-2,2V28H8V17H24V28h2V17A2,2,0,0,0,24,15ZM10,6H22v9H10Z"
                        />
                        <path
                          d="M12 10H15V12H12z"
                        />
                        <path
                          d="M17 10H20V12H17z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Edirol UA-1000
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      UA-1000
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/hotone-jogg"
                  style="--item-color: var(--cds-support-error);"
                  title="Open the HoTone JoGG interface page for connection-state visibility and device-specific controls when that interface profile is active. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Audio Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,19h-2v-6h2v6ZM4,10h-2v12h2v-12ZM14,10h-2v12h2v-12ZM24,10h-2v12h2v-12ZM9,6h-2v20h2V6ZM29,6h-2v20h2V6Z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      HoTone JoGG
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      JoGG
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/ground-control-pro"
                  style="--item-color: var(--cds-support-info);"
                  title="Import, diff, validate, back up, and transmit full-memory SysEx dumps for the Voodoo Lab Ground Control Pro. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Human Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Ground Control Pro
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      GCP
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/intelfx"
                  style="--item-color: #e53935;"
                  title="Control the Rocktron Intellifex from MAP2, including signal flow editing, preset library, MIDI mapping, scenes, and real-time parameter control. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Human Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="20"
                        viewBox="0 0 32 32"
                        width="20"
                      >
                        <rect
                          fill="none"
                          height="20"
                          rx="4"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                          width="22"
                          x="5"
                          y="6"
                        />
                        <path
                          d="M9 11h14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M9 16h14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M9 21h14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <circle
                          cx="11"
                          cy="11"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="21"
                          cy="16"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="15"
                          cy="21"
                          fill="currentColor"
                          r="1.2"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      IntelFX Rack
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Beta
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/lcd"
                  style="--item-color: var(--cds-support-success);"
                  title="Access the dedicated LCD console surface for external display and hardware-panel workflows that still depend on qualification evidence. • Hardware Not Detected"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Human Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10,30H4a2,2,0,0,1-2-2V16a2,2,0,0,1,2-2h6a2,2,0,0,1,2,2V28A2,2,0,0,1,10,30ZM4,16V28h6V16Z"
                        />
                        <path
                          d="M28,4H6A2,2,0,0,0,4,6v6H6V6H28V20H14v2h2v4H14v2h9V26H18V22H28a2,2,0,0,0,2-2V6A2,2,0,0,0,28,4Z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      LCD Console
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Hardware Not Detected
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/maschine"
                  style="--item-color: var(--cds-support-success);"
                  title="Open the Maschine MK1 control page for daemon connectivity, encoder ownership, LCD simulation, LED state, HID traffic, and firmware diagnostics. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Human Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Maschine MK1
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Maschine
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/mpx1"
                  style="--item-color: var(--cds-link-primary);"
                  title="Control the Lexicon MPX-1 from MAP2, including editor access, live program changes, diagnostics, library tasks, and MIDI mapping tools. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Human Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="20"
                        viewBox="0 0 32 32"
                        width="20"
                      >
                        <rect
                          fill="none"
                          height="20"
                          rx="4"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                          width="22"
                          x="5"
                          y="6"
                        />
                        <path
                          d="M9 11h14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M9 16h14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <path
                          d="M9 21h14"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.8"
                          vector-effect="non-scaling-stroke"
                        />
                        <circle
                          cx="11"
                          cy="11"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="21"
                          cy="16"
                          fill="currentColor"
                          r="1.2"
                        />
                        <circle
                          cx="15"
                          cy="21"
                          fill="currentColor"
                          r="1.2"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      MPX1 Rack
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Beta
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/physical-surfaces"
                  style="--item-color: var(--cds-support-info);"
                  title="Open the Enriched_MIDI_Physical_Surfaces shell for shared controller-family discovery, capability posture, and per-device subpages. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Human Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Physical Surfaces
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Surfaces
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/labs/push-surface"
                  style="--item-color: var(--cds-link-primary);"
                  title="Program Ableton Push mappings, layers, welcome routines, live feedback, and advanced control-surface behavior from a dedicated Labs route. • Beta"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Human Interface
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Push Surface
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Push
                    </span>
                  </span>
                </a>
                <a
                  class="start-menu-card start-menu-card--tile"
                  href="/"
                  style="--item-color: var(--cds-support-warning);"
                  title="Return to the navigation landing page where every MAP2 workflow is explained and available from the desktop shell. • Qualified With Waiver"
                >
                  <span
                    class="start-menu-card__kicker start-menu-card__kicker--tile"
                  >
                    Platform
                  </span>
                  <span
                    aria-hidden="true"
                    class="start-menu-card__icon-frame"
                  >
                    <span
                      class="start-menu-card__icon start-menu-card__icon--tile"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16.6123,2.2138a1.01,1.01,0,0,0-1.2427,0L1,13.4194l1.2427,1.5717L4,13.6209V26a2.0041,2.0041,0,0,0,2,2H26a2.0037,2.0037,0,0,0,2-2V13.63L29.7573,15,31,13.4282ZM18,26H14V18h4Zm2,0V18a2.0023,2.0023,0,0,0-2-2H14a2.002,2.002,0,0,0-2,2v8H6V12.0615l10-7.79,10,7.8005V26Z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="start-menu-card__body"
                  >
                    <span
                      class="start-menu-card__label start-menu-card__label--tile"
                    >
                      Home
                    </span>
                    <span
                      class="start-menu-card__meta"
                    >
                      Qualified With Waiver
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="Running applications"
        class="window-taskbar__indicators"
      >
        <button
          aria-label="Taskbar close Audio Artifacts"
          class="window-taskbar__indicator is-running is-active"
          title="Audio Artifacts • click to close"
          type="button"
        >
          <span
            aria-hidden="true"
            class="window-taskbar__indicator-icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="16"
              viewBox="0 0 32 32"
              width="16"
            >
              <path
                d="M7 9h11l3 3h4v13H7z"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M7 12h18"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M12 14.5v8.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 16h7"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 19h7"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 22h5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <circle
                cx="10"
                cy="16.5"
                fill="currentColor"
                r="1"
              />
              <circle
                cx="10"
                cy="19.5"
                fill="currentColor"
                r="1"
              />
              <path
                d="M10 17.5v1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M10 20.5v1.5h1.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
            </svg>
          </span>
          <span
            class="window-taskbar__indicator-text"
          >
            Artifacts
          </span>
        </button>
      </div>
    </div>
    <div
      class="window-taskbar__right"
    >
      <div
        class="window-taskbar__status window-taskbar__status--nodes"
      >
        <div
          data-testid="node-nav-bar"
        />
      </div>
      <div
        class="window-taskbar__status window-taskbar__status--latency"
      >
        <div
          data-testid="shell-latency-pressure-readout"
        >
          09
        </div>
      </div>
      <div
        class="window-taskbar__status window-taskbar__status--clock"
      >
        <div
          data-testid="taskbar-clock"
        >
          9:41 AM
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="cds--layer-one cds--modal shell-power-modal"
    role="presentation"
  >
    <div
      aria-label="Power"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--sm"
      role="dialog"
    >
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
      <div
        class="cds--modal-container-body"
      >
        <div
          class="cds--modal-header"
        >
          <h2
            class="cds--modal-header__label cds--type-delta"
          >
            Power
          </h2>
          <h2
            class="cds--modal-header__heading cds--type-beta"
          >
            Restart backend
          </h2>
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-_r_t_"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_t_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        >
          Restart the MAP2 backend service? Audio processing will pause briefly while the shell reconnects.
        </div>
        <div
          aria-busy="false"
          class="cds--modal-footer cds--btn-set"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Confirm restart
          </button>
        </div>
      </div>
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
    </div>
  </div>
</div>
`;
